# astronavis-api

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: main.rs
src/routes/: health.rs
